# VoragineCore

./: CMakeLists.txt  Need Urgent Fix List.txt  README  THANKS  To-do List.txt
contrib/ScriptsConverter/: ScriptConverter.sln  UpgradeLog.XML
contrib/ScriptsConverter/ScriptConverter/: ScriptConverter.csproj
dep/mysqllite/: CMakeLists.txt
pending works/AHBot/: AHBot.rar
pending works/Cataclysm Content/: Readme.txt
pending works/Cataclysm Content/Database/4.2.0 - Content/: Table Templates update.sql  emuopcodes.sql
pending works/Cataclysm Content/Instances/: deepholm.cpp  gilneas.cpp  kezan.cpp  mount_hyjal.cpp  tol_barad.cpp  twilight_highlands.cpp  uldum.cpp
pending works/Cataclysm Content/Instances/BaradinHold/: baradin_hold.h  boss_argaloth.cpp  instance_baradin_hold.cpp
pending works/Cataclysm Content/Instances/BlackwingDescent/: boss_atramedes.cpp  boss_magmaw.cpp
pending works/Cataclysm Content/Instances/GrimBatol/: boss_forgemaster_throngus.cpp  boss_general_umbriss.cpp  grimbatol.h  instance_grimbatol.cpp
pending works/Cataclysm Content/Instances/HallsOfOrigination/: boss_anraphet.cpp  boss_earthrager_ptah.cpp  boss_isiset.cpp  boss_temple_guardian_anhuur.cpp  halls_of_origination.h  instance_halls_of_origination.cpp
pending works/Cataclysm Content/Instances/LostCityofTheTolVir/: boss_general_husam.cpp  boss_high_prophet_barim.cpp  boss_lockmaw.cpp  instance_the_lost_city_of_tol_vir.cpp  the_lost_city_of_tol_vir.h
pending works/Cataclysm Content/Instances/TheVortexPinnacle/: instance_the_vortex_pinnacle.cpp  the_vortex_pinnacle.h
pending works/Cataclysm Content/Instances/ThroneOfTheTides/: boss_commander_ulthok.cpp  boss_erunak_stonespeaker.cpp  boss_lady_nazjar.cpp  instance_throne_of_the_tides.cpp  npc_neptulon.cpp  throne_of_the_tides.h
pending works/Cataclysm Content/Spells/: spell_dk.cpp  spell_druid.cpp  spell_generic.cpp  spell_hunter.cpp  spell_item.cpp  spell_mage.cpp  spell_paladin.cpp  spell_shaman.cpp
pending works/Cataclysm Content/Spells Cataclysm - new/: spell_quest.cpp  spell_warlock.cpp
pending works/New Flight System/: New Flight System.rar  Readme.txt  fly_paths(SQL).rar
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  CMakeLists.txt  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: WorldModel.h  (+3 more)
src/server/game/: CMakeLists.txt
src/server/logonserver/: CMakeLists.txt  Main.cpp  logonserver.conf.dist  logonserver.rc
src/server/logonserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/logonserver/PrecompiledHeaders/: authPCH.cpp  authPCH.h
src/server/logonserver/Realms/: RealmList.cpp  RealmList.h
src/server/logonserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/tools/extractor/: CMakeLists.txt  Log.cpp  Log.h  MPQ.cpp  adt.h  dbc.cpp  dbc.h  headers.h  main.cpp  map.cpp  misc.cpp
src/tools/vmap3_assembler/: CMakeLists.txt  Log.cpp  VMapAssembler.cpp
src/tools/vmap3_extractor/: CMakeLists.txt  Log.cpp  Log.h  adtfile.cpp  dbcfile.cpp  model.cpp  mpq_libmpq.cpp  vmapexport.cpp  wdtfile.cpp  wmo.cpp
(+1087 files in other folders)
